[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Main/GUI.tres" type="Theme" id=2]
[ext_resource path="res://Main/Camera.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 20, 2, 1.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 10, 1, 0.75 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.231373 )
corner_radius_top_left = 25
corner_radius_bottom_left = 25
corner_detail = 5

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="World" type="Spatial" parent="."]

[node name="Objects" type="Spatial" parent="World"]

[node name="Walls" type="Spatial" parent="World"]

[node name="MeshInstance" type="MeshInstance" parent="World/Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.5, -0.75 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="World/Walls/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="World/Walls/MeshInstance/StaticBody"]
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.86698 )
script = ExtResource( 3 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Edit" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41425
margin_top = -2.91255
margin_right = 1.41431
margin_bottom = -2.91254
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeldBtn" type="Control" parent="GUI/Edit"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prop" type="HBoxContainer" parent="GUI/Edit"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -39.0
size_flags_horizontal = 10
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inv" type="Panel" parent="GUI/Edit"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.414
margin_right = -1.41418
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="GUI/Edit/Inv"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = -13.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="GUI"]
margin_top = -0.471935
margin_right = 62.0
margin_bottom = 36.5281
theme = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projection" type="Button" parent="GUI"]
margin_top = 39.0
margin_right = 62.0
margin_bottom = 77.0
theme = ExtResource( 2 )
toggle_mode = true
text = "Proj"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoitnCnt" type="Label" parent="GUI"]
margin_top = 81.0
margin_right = 53.0
margin_bottom = 95.0
text = "JointInfo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlobalJoints" type="Node" parent="."]

[connection signal="pressed" from="GUI/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="GUI/Projection" to="Camera" method="_on_Projection_pressed"]
